[project]
name = "repo-agent"
version = "0.1.0"
description = "CLI agent that combines Git insights with Nemotron SLM responses."
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.11"
dependencies = [
  "typer[all]>=0.12",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "rich>=13.7",
  "litellm>=1.49.0",
  "smolagents",
]

[project.scripts]
repo-agent = "repo_agent.cli:app"

[tool.uv]
dev-dependencies = [
  "pytest>=8.3",
  "pytest-mock>=3.12",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
